syntax = "proto3";

package com.amazonaws.athena.connector.lambda.proto.domain.predicate;

import 'Range.proto';
import "Block.proto";
import "ArrowTypeMessage.proto";
option java_multiple_files = true;

message SortedRangeSet {
  optional string type = 1 [json_name="@type"];
  optional com.amazonaws.athena.connector.lambda.proto.arrowtype.ArrowTypeMessage arrowTypeMessage = 2 [json_name="type"];
  repeated com.amazonaws.athena.connector.lambda.proto.domain.predicate.Range ranges = 3;
  optional bool nullAllowed = 4;
}

message EquatableValueSet {
  optional string type = 1 [json_name="@type"];
  optional com.amazonaws.athena.connector.lambda.proto.data.Block valueBlock = 2;
  optional bool whiteList = 3;
  optional bool nullAllowed = 4;
}

message AllOrNoneValueSet {
  optional string type = 1 [json_name="@type"];
  optional com.amazonaws.athena.connector.lambda.proto.arrowtype.ArrowTypeMessage arrowTypeMessage = 2 [json_name="type"];
  optional bool all = 3;
  optional bool nullAllowed = 4;
}


message ValueSet {
  oneof kind {
    SortedRangeSet sortedRangeSet = 1;
    EquatableValueSet equatableValueSet = 2;
    AllOrNoneValueSet allOrNoneValueSet = 3;
  }

   // optional string type = 1 [json_name="@type"];
   // optional Struct arrowTypeMessage = 2 [json_name="type"]; // missing for EquatableValueSet
   // repeated com.amazonaws.athena.connector.lambda.proto.domain.predicate.Range ranges = 3; // present for SortedRangeSet
   // optional com.amazonaws.athena.connector.lambda.proto.data.Block valueBlock = 4; // present for EquatableValueSet
   // optional bool whiteList = 5; // just for EquatableValueSet
   // optional bool all = 6; // just for AllOrNoneValueSet
   // optional bool nullAllowed = 7;
}

